# SiteInsight

./: .gitignore  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements.txt  test-page.json
page/source/: page.py
source/: TUI.py  Tui.py  __init__.py  config.py  crawle2r.py  crawler.py  main.py  network.py  page.py  parser.py  report.py  sitemap.py  test.py  url_utils.py  utils.py
source/ui/: TUI.py  archive.py  dialogs.py  page_viewer.py  theme.py
test/: config-test.py  crawler-test.py  network-test.py  page-test.py  parser-test.py  sitemap-test.py
