[project]
name = "site-insight"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdi", email = "whoo.mahdi@gmail.com"},
    {name = "mhrohani1385", email = "M.H.Rohani1385@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fake-useragent (>=2.2.0,<3.0.0)",
    "anytree (>=2.13.0,<3.0.0)",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
