[project]
name = "site-insight"
version = "0.1.0"
description = ""
authors = [
    {name = "mahdi", email = "whoo.mahdi@gmail.com"},
    {name = "mhrohani1385", email = "M.H.Rohani1385@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "fake-useragent (>=2.2.0,<3.0.0)",
    "anytree (>=2.13.0,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "requests (>=2.34.2)",
    "lxml (>=6.1.1,<7.0.0)",
    "textual-serve (>=1.1.3,<2.0.0)",
    "textual (>=8.2.8,<9.0.0)",
    "textual-image (>=0.13.2,<0.14.0)",
    "pillow (>=12.3.0,<13.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
